objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>COVID-19 Lead Process</fullName>
        <description>Used to collect participants in April 2020 COVID-19 validation study</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GRECO Process</fullName>
        <description>Used to collect participants in May 2020 GRECO study</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Lead_Source__c</fullName>
        <formula>CASE( TEXT(LeadSource),
&apos;Physician Form&apos;, &apos;Physician - Internet&apos;,
&apos;Patient Form&apos;, &apos;Patient - Internet&apos;,
TEXT(LeadSource)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinic_Name__c</fullName>
        <label>Clinic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covid_19_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covid-19 Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covid_19_Consent_Form_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this contact been emailed a consent form via Docusign for the Covid-19 validation study?</inlineHelpText>
        <label>Covid-19 Consent Form Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covid_19_Google_Doc_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when we&apos;ve received the consent form back from the patient and have updated the Google Doc that Clinical uses to send out kits.</inlineHelpText>
        <label>Covid-19 Google Doc Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Covid_19_Consent_Form_Sent__c</fullName>
        <label>Date Covid-19 Consent Form Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRECO_B_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GRECO-B Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRECO_B_Consent_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GRECO-B Consent Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Guardant Health Client</fullName>
                </value>
                <value>
                    <fullName>New Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Family Member or Friend</fullName>
                </value>
                <value>
                    <fullName>Media/Public Relations</fullName>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_URL__c</fullName>
        <formula>&apos;https://na66.salesforce.com/&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Not_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI Not Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Kits__c</fullName>
        <label>No Of Kits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_Lead_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot Lead Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_First_Name__c</fullName>
        <label>Physician First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Last_Name__c</fullName>
        <label>Physician Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Contact_First_Name__c</fullName>
        <description>This field is from the Pardot Request Guardant 360 Kit.</description>
        <inlineHelpText>This field is from the Pardot Request Guardant 360 Kit.</inlineHelpText>
        <label>Practice Contact First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Contact_Last_Name__c</fullName>
        <description>This field is from the Pardot Request Guardant 360 Kit.</description>
        <inlineHelpText>This field is from the Pardot Request Guardant 360 Kit.</inlineHelpText>
        <label>Practice Contact Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Office_Contact_Email__c</fullName>
        <description>This field is from the Pardot Request Guardant 360 Kit.</description>
        <inlineHelpText>This field is from the Pardot Request Guardant 360 Kit.</inlineHelpText>
        <label>Practice Office Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Cancer_Type__c</fullName>
        <label>Primary Cancer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_a_Kit_Details__c</fullName>
        <label>Request a Kit Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestakit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for triggering email from workflow from backend</description>
        <label>Requestakit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscribe__c</fullName>
        <label>Subscribe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Show__c</fullName>
        <label>Trade Show</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AACR</fullName>
                </value>
                <value>
                    <fullName>ASCO</fullName>
                </value>
                <value>
                    <fullName>ASCO 2016</fullName>
                </value>
                <value>
                    <fullName>ASCO 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>GRECO_B_Candidate__c</columns>
        <columns>GRECO_B_Consent_Approved__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Inquiry_Type__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Unread_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>Suresh,Client Services,Daniela,Ruben,StanS,Daniel S</value>
        </filters>
        <label>All Unread Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Services</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Covid_19_Candidate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Client Services</label>
        <language>en_US</language>
        <queue>Client_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Covid_19_Leads</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>Covid_19_Consent_Form_Sent__c</columns>
        <columns>Date_Covid_19_Consent_Form_Sent__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.COVID_19_Lead</value>
        </filters>
        <filters>
            <field>Covid_19_Candidate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Covid-19 Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Client_Services_Associate</role>
            <role>Manager_Client_Services</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GRECO_B_Lead</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>GRECO_B_Candidate__c</columns>
        <columns>GRECO_B_Consent_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GRECO_B_Candidate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GRECO_B_Consent_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GRECO-B</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Inquiry_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>COVID_19_Lead</fullName>
        <active>true</active>
        <businessProcess>COVID-19 Lead Process</businessProcess>
        <description>Used for Participants in April 2020 COVID-19 Validation Study</description>
        <label>COVID-19 Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>GRECO_Lead</fullName>
        <active>true</active>
        <businessProcess>GRECO Process</businessProcess>
        <description>Used for May 2020 GRECO Study. Contains PHI.</description>
        <label>GRECO Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Lead</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <label>Standard Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>